Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages. There is also a sg3_utils man page.

Changelog for sg3_utils-1.42 [20150722] [svn: r645]
  - sg_stpg: fix truncation of target port field

Changelog for sg3_utils-1.41 [20150511] [svn: r644]
  - sg_zone: new utility for open, close and finish
    zone commands introduced in zbc-r02
  - sg_rep_zones and sg_reset_wp: change opcodes as
    indicated in zbc-r02
  - sg_read_buffer: add READ BUFFER(16) support (spc5r02)
  - sg_logs: add --enumerate and acronyms
    - allow decode from hex or binary in file
    - decode environmental reporting + limits lpages
  - sg_write_buffer: add --timeout=TO option
  - sg_lib interface: add sg_lib_pdt_decay(), TPROTO_PCIE
    plus support for zoning service actions
  - sg_lib: in Linux blocked devices yield ENXIO from
    ioctl(SG_IO), map to SG_LIB_CAT_NOT_READY
    - clean up sg_warnings_stream handling
  - sg_inq+sg_vpd: fix SCSI name string decoding in
    device identification VPD page (0x83)
    - increase sanity on Unit Serial number VPD page
    - improve rdac vpd page reporting (vendor)
  - sg_inq: improve NAA handling in dev_id VPD page
    - update version descriptor list to 20150126
  - sg_vpd: add atomic boundary values (sbc4r04)
    - block limits VPD page: fix unmap granularity
      alignment value; spc5r02 additions
  - sg_readcap: add support for ZBC's rc_basis field
  - sg_senddiag: fix bug with --raw option
    - add support for -HHH for output suitable for --raw
  - sg_ses: enclosure element: add failure and warning
    acronyms, fix warning indication output
    - additional element status dpage: add PCIe/NVMe
    - handle element descriptor names that count
      multiple trailing NULLs
  - rescan-scsi-bus.sh: add --issue-lip-wait option and
    improve error handling
    - improve dm-multipath handling