@@ -2,8 +2,9 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.42 [20150722] [svn: r645]
+Changelog for sg3_utils-1.42 [20151029] [svn: r646]
   - sg_stpg: fix truncation of target port field
+  - sg_inq: cope with unicode strings, udev fixes
 
 Changelog for sg3_utils-1.41 [20150511] [svn: r644]
   - sg_zone: new utility for open, close and finish
